--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ email: melvin.daytree@uconn.edu
 description: > # this means to ignore newlines until "baseurl:"
   Did you ever want to know all about the greatest language the web has ever known? Then you're in the right place.
 baseurl: "/jekylltest" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://melvindaytree.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: melvindaytree
 github_username:  melvindaytree
 excerpt_separator: <!--more-->
-paginate: 3
+
 
 # Build settings
 markdown: kramdown
